# AutoAnnotator

./: .gitignore  AGENTS.md  BBoxFixer操作手册.md  CLAUDE.md  README.md  check_interval_shift.py  example_segment_metadata.json  generate_segment_metadata.py  interval_check_report.json  package-lock.json  pyproject.toml  test_samurai_metadata.json  test_scoreboard_single_real.py  video_captioner_config.toml
config/: .env.example  config.yaml  video_captioner_config.toml
docs/: AI_COACH_ANNOTATOR.md  BBOX_FIXER.md  DATASET_STRUCTURE.md  QUICKSTART.md  REVIEW_GUIDE.md  SPATIAL_IMAGINATION_ANNOTATOR.md  TASK_ANNOTATION_WORKFLOWS.md  USAGE_EXAMPLES.md  VIDEO_CAPTIONER.md  clip_metadata_schema.json  segment_metadata_schema.json
examples/: example_clip_metadata.json  example_frame_metadata.json  example_segment_metadata.json  example_singleframe_metadata.json  test_scoreboard_single_real.py
scripts/: add_reviewed_flag.py  annotate_ai_coach.py  annotate_spatial_imagination.py  audit_single_frame_video_tasks.py  batch_processing.py  bbox_fixer.py  bbox_fixer_app.py  bbox_fixer_cli.py  check_mot_collisions.py  check_video_captioner_progress.py  check_video_sizes.py  cleanup_deprecated_tasks.py  cleanup_empty_task_segments.py  cleanup_temp_frames.py  clear_tasks.py  convert_event_root_to_clips.py  dataset_doctor.py  delete_event_metainfo.py  expand_task_abbreviations.py  export_caption_checking.py  extract_waibao_subset.py  fix_dataset_sport_event.py  fix_segment_json_ids.py  generate_captions.py  generate_segment_metadata.py  monitor.py  mot_editor.py  move_original_dataset_assets.py  osr_fixer.py  reencode_clips_nvenc.py  remove_object_tracking_fields.py  summary_stats.py  sync_prune_outputs.py  test_input_adapter.py  test_object_tracking_real_fixed.py  update_total_frames.py  validate_clip_frames.py
tests/: __init__.py  test_adapters.py  test_annotate_ai_coach.py  test_annotate_spatial_imagination.py  test_check_video_sizes.py  (+18 more)
(+58 files in other folders)
