[project]
name = "auto-annotator"
version = "0.1.0"
description = "AI-powered video annotation system for multimodal sports datasets"
readme = "README.md"
authors = [
    { name = "qi7876", email = "97651950+qi7876@users.noreply.github.com" }
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "opencv-python>=4.8.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.8.0",
    "pillow>=10.0.0",
    "google-genai>=1.55.0",
    "torch>=2.9.1",
    "httpx[socks]>=0.28.1",
    "hydra-core>=1.3.2",
    "sam2>=1.1.0",
    "huggingface-hub>=1.2.3",
    "av>=16.0.1",
    "loguru>=0.7.3",
    "iopath>=0.1.10",
    "scipy>=1.16.3",
    "decord>=0.6.0",
    "google-cloud-storage>=2.19.0",
    "PySide6>=6.6.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pyinstaller>=6.17.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
